# Dataset-Characteristics

./: .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  dataset_characteristic.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: github-pages.yml  python-package.yml
dace/: README.md  __init__.py  setup.py
dace/characteristics/: dataset.py
dace/display/: __init__.py  data.py
dace/utils/: data.py
data/: AdvBikeBuyer.csv  Coupons.csv  Customer_Behaviour.csv  Customertravel_toursNtravelChun.csv  Dummy Classification HSS.csv  EmployeeFuturePred.csv  Loan_status.csv  ObesityDataSet_raw_and_data_sinthetic.csv  PCOS_data.csv  Smoker_dataset.csv  UniversalBank_bankLoanClass.csv  b_depressed.csv  balance-scale.csv  call_metrics_dataset.csv  car1_theCars.csv  car_data.csv  car_data_purchse.csv  cc_approvals.csv  churn-bigml-80_TelChurn.csv  collegePlace.csv  customer_data.csv  data_gotoCollage.csv  dataset_194_eucalyptus.csv  dataset_Mechanical_Rotation_unknownFeaturesClass.csv  diabetes_data_upload.csv  drug200classification.csv  employee_attrition_train.csv  estonia-passenger-list.csv  facies_data_wellLog.csv  flag.csv  house-votes-84.data.csv  hypothyroid.csv  large_data_covidFluColdSympt.csv  merged.csv  metricas_detectVentricularFibrilation.csv  ml_binary_classification_data.csv  neutron_moderator.csv  original_creditRisk.csv  parkinsons.csv  statlog_HeartDataset.csv  (+7 more)
datainspector/: README.md
docs/: README.md  conf.py  index.md  requirements.txt
docs/_static/: ai-sidebar.css  ai-sidebar.js
docs/_templates/: ai_sidebar.html  layout.html
docs/assets/javascripts/: ai-links.js
docs/assets/stylesheets/: extra.css
draft/: CsvHeatmapModel.ipynb  MarkdownsInJupyterNotebook.ipynb
tests/: test_package_metadata.py
